connect to ethereum
Change-Id: I76ed31ba0f41d75650425a1db501ad299f106ff2

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 
         <div class="row">
             <div id="galaxy" class="col-md-8">
-
+                
             </div>
             <div id="control-panel" class="col-md-4">
                 <div class="panel panel-default">
@@ -64,7 +64,42 @@
                     </div>
 
                     <div class="panel-body">
+                        <div>
+                            <label>Network</label>
+                            <span id="status-network">
 
+                            </span>
+                        </div>
+                        <div>
+                            <label>Contract</label>
+                            <span id="status-contract">
+
+                            </span>
+                        </div>
+                        <div>
+                            <label>Total Grids</label>
+                            <span id="status-total-grids">
+
+                            </span>
+                        </div>
+                        <div>
+                            <label>Sold Grids</label>
+                            <span id="status-sold-grids">
+
+                            </span>
+                        </div>
+                        <div>
+                            <label>Transaction Fee</label>
+                            <span id="status-tran-fee">
+
+                            </span>
+                        </div>
+                        <div>
+                            <label>Minimal Price</label>
+                            <span id="status-min-price">
+
+                            </span>
+                        </div>
                     </div>
                 </div>
                 <div class="panel panel-default">
@@ -119,6 +154,7 @@
             </div>
         </div>
     </div>
+    <script src="javascripts/Earth.js"></script>
     <script src="javascripts/grids.js"></script>
     <script src="javascripts/AppSkeleton.js"></script>
 </body>
