add earth squre
Change-Id: I724ca456fee0ae34fb21a7933ea7604a7860a45a

--- a/public/index.html
+++ b/public/index.html
@@ -151,6 +151,42 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel panel-default">
+                    <div class="panel-heading">
+                        Operation Board
+                    </div>
+                    <div class="panel-body">
+                        <div >
+                            <div class="form-group">
+                                <label for="grid-idx">
+                                    Grid index
+                                </label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" name="grid-idx">
+                                    <span id="search-grid" class="input-group-addon success"><span class="glyphicon glyphicon-ok"></span></span>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div>
+                                    <label>Current owner</label>
+                                    <span id="oper-grid-owner"></span>        
+                                </div>
+
+                                <div>
+                                    <label>Current State</label>
+                                    <span id="oper-grid-state"></span>
+                                </div>
+                                <div>
+                                    <label>Current price</label>
+                                    <span id="oper-grid-price"></span>
+                                </div>                                
+                            </div>
+
+                            <button id=”buy-grid" class="btn btn-default col-xs-12">Buy this grid</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
