--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
 
-    <title>===EEGalaxy===</title>
+    <title>===TEST===</title>
     <script
             src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -25,7 +25,7 @@
 <nav class="navbar navbar-default" role="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">EEGalaxy</a>
+            <a class="navbar-brand" href="#">Test</a>
         </div>
         <div class="pull-right">
             <ul class="nav navbar-nav">
@@ -60,7 +60,7 @@
             <div id="control-panel" class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        EEGalaxy Status
+                         Status
                     </div>
 
                     <div class="panel-body">
