user can buy grid now
Change-Id: Idaa517ee8a3eb49548c11e9b6f6e4c44fc33596c

--- a/public/index.html
+++ b/public/index.html
@@ -183,7 +183,7 @@
                                 </div>                                
                             </div>
 
-                            <button id=”buy-grid" class="btn btn-default col-xs-12">Buy this grid</button>
+                            <button id="buy-grid" class="btn btn-default col-xs-12">Buy this grid</button>
                         </div>
                     </div>
                 </div>
