reveal your owned grids
Change-Id: I314b6dde8973a9822699a847ecc11bc4e8dc126c

--- a/public/index.html
+++ b/public/index.html
@@ -103,6 +103,7 @@
                     </div>
                 </div>
                 <div class="panel panel-default">
+
                     <div class="panel-body">
                         <div class="row">
                                 <span class="col-md-6">
@@ -150,6 +151,31 @@
                             </span>
                         </div>
                     </div>
+
+                    <div class="panel-heading">
+                        Player status
+                    </div>
+                    <div class="panel-body">
+                        <div>
+                            <label>
+                                address
+                            </label>
+                            <div id="player-address">
+
+                            </div>
+                        </div>
+
+                        <div>
+                            <label>
+                                owned grids count
+                            </label>
+                            <div id="player-grids-count">
+
+                            </div>
+                        </div>
+
+                        <select id="player-grids-list"></select>
+                    </div>
                 </div>
                 <div class="panel panel-default">
                     <div class="panel-heading">
@@ -190,7 +216,8 @@
             </div>
         </div>
     </div>
-    <script src="javascripts/Earth.js"></script>
+    <script src="javascripts/Earth.js"></script> 
+    <script src="javascripts/contract.js"></script>
     <script src="javascripts/grids.js"></script>
     <script src="javascripts/AppSkeleton.js"></script>
 </body>
