user can buy and sell grid now
Change-Id: If50369f9dd84801e29a686e3eca99842df2d4a39

--- a/public/index.html
+++ b/public/index.html
@@ -209,7 +209,18 @@
                                 </div>                                
                             </div>
 
-                            <button id="buy-grid" class="btn btn-default col-xs-12">Buy this grid</button>
+                            <div id="buy-grid" class="form-group">
+                                <button id="buy-grid-btn" class="btn btn-success col-xs-12">Buy this grid</button>    
+                            </div>
+                            
+                            <div id="sell-grid" class="form-group">
+                                <div class="input-group">
+                                    <input type="number" class="form-control" name="grid-sell-price">
+                                    <span class="input-group-addon">ETH</span>
+                                </div>
+                                <br/>
+                                <button id="sell-grid-btn" class="btn btn-danger col-xs-12">Sell this grid</button>
+                            </div>
                         </div>
                     </div>
                 </div>
