--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 <body>
 <canvas id="canvas"></canvas>        
     
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default " role="navigation">
     <div class="container">
         <div class="navbar-header">
             <a class="navbar-brand" href="#">Test</a>
@@ -60,7 +60,7 @@
                 
             </div>
             <div id="control-panel" class="col-md-4">
-                <div class="panel panel-default">
+                <div class="panel panel-default panel-transparent">
                     <div class="panel-heading">
                          Status
                     </div>
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="panel panel-default panel-transparent">
 
                     <div class="panel-body">
                         <div class="row">
@@ -179,7 +179,7 @@
                         <select id="player-grids-list"></select>
                     </div>
                 </div>
-                <div class="panel panel-default">
+                <div class="panel panel-default panel-transparent">
                     <div class="panel-heading">
                         Operation Board
                     </div>
