--- a/public/howtoch.html
+++ b/public/howtoch.html
@@ -39,10 +39,10 @@
                <!-- end of tooplate_menu -->
                <div class="cleaner"></div>
             </div>
-            <div id="brief">
+            <div>
                <div class="">
                   <div class="">
-                     <div class="panel" id="home">
+                     <div class="panel" id="brief">
                         <div class="col_650 float_r">
                            <h2>欢迎来到以太银河</h2>
 
