--- a/public/howtoch.html
+++ b/public/howtoch.html
@@ -9,6 +9,9 @@
       <title>===EEGalaxy===</title>
       <meta name="keywords" content="" />
       <meta name="description" content="" />
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+    crossorigin="anonymous">
       <link href="/howto/tooplate_style.css" rel="stylesheet" type="text/css" />
       <link rel="stylesheet" href="/howto/css/coda-slider.css" type="text/css" charset="utf-8" />
       <script src="/howto/js/jquery-1.2.6.js" type="text/javascript"></script>
@@ -17,6 +20,8 @@
       <script src="/howto/js/jquery.serialScroll-1.2.1.js" type="text/javascript" charset="utf-8"></script>
       <script src="/howto/js/coda-slider.js" type="text/javascript" charset="utf-8"></script>
       <script src="/howto/js/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
    </head>
    <body>
       <div id="slider">
@@ -39,66 +44,89 @@
                <!-- end of tooplate_menu -->
                <div class="cleaner"></div>
             </div>
-            <div>
-               <div class="">
-                  <div class="">
-                     <div class="panel" id="brief">
-                        <div class="col_650 float_r">
-                           <h2>欢迎来到以太银河</h2>
+            <div class="row" >
+              <div class="col-md-offset-2 col-md-10">
+                  <h2 id="brief">欢迎来到以太银河</h2>
 
-                           <p>
-                              以太银河是一款基于以太坊的虚拟世界游戏，这个星球被分成了许多小网格并由智能合约管理。玩家可以购买，出售以及修建规划你的领地，并修建自己的舰队。
-                              每一个领主也是这个虚拟世界的参与者，可以分享这个虚拟世界里的收益。
-                            </p>  
-                           <img src="/images/howto-brief.png" alt="Image 01" class="image_wrapper" style="width:90%"/>
-                        </div>
-                     </div>
-                     <!-- end of home -->
-                     <div class="panel" id="about">
-                        <div class="col_380 float_l">
-                           <h1>界面介绍</h1>
-                           <p>
-                             进入游戏后，左边区域为状态栏，由上往下分别是世界状态和玩家状态。
-                           </p>
-                           <p>
-                              <em>领地总数</em> 表示该星球领地被划分的块数
-                           </p>
-                           <p>
-                              <em>已卖出</em> 表示该星球领地被卖出的数量，已经被卖出土地再卖出不重复计算
-                           </p>
-                           <p>
-                              <em>手续费率</em> 表示系统每次交易收取手续费
-                           </p>
-                           <p>
-                             <em>最小出价</em> 表示当前每块领地第一次出售的最低价格
-                           </p>
-                           <p>
-                             两个开关分别用于关闭浮层网格，和关闭随鼠标投射的遮罩
-                           </p>
-
-                           <p>
-                             <em>玩家状态栏</em> 会显示当前玩家的地址，logo，在当前世界的收益以及拥有的领土信息
-                           </p>
-                           <p>
-                             点击头像以上传新的logo，这里需要调用sign来做用户验证，该步骤不需要花费任何ether，也没有安全风险。
-                           </p>
-                           <p>
-                             系统会记录您当前的收益，点击<em>领取</em> 可以将收益领取到您当前地址上
-                           </p>
-                        </div>
-                        <div class="col_270 float_r">
-                          <img src="/images/howto-status.png" style="width:70%" class="image_wrapper">
-                        </div>
-                     </div>
-                     <div class="panel" >
-
-                     </div>
-                     <!-- end of aboutus -->
-                     <!-- end of contact -->
-                  </div>
-               </div>
-               <!-- end of scroll -->
+                  <p>
+                    以太银河是一款基于以太坊的虚拟世界游戏，这个星球被分成了许多小网格并由智能合约管理。玩家可以购买，出售以及修建规划你的领地，并修建自己的舰队。
+                    每一个领主也是这个虚拟世界的参与者，可以分享这个虚拟世界里的收益。
+                  </p>  
+                  <img src="/images/howto-brief.png" alt="Image 01" class="image_wrapper" style="width:90%"/>
+              </div>
             </div>
+            <!-- end of brief -->
+
+            <div class="row" >
+              <div class="col-md-offset-2 col-md-4 ">
+                  <img src="/images/howto-status.png" style="width:70%" class="image_wrapper">
+                </div>
+              <div class="col-md-6  ">
+                  <h1 id="about">玩法</h1>
+                  <p>
+                    进入游戏后，左边区域为状态栏，由上往下分别是世界状态和玩家状态。
+                  </p>
+                  <p>
+                    <em>领地总数</em> 表示该星球领地被划分的块数
+                  </p>
+                  <p>
+                    <em>已卖出</em> 表示该星球领地被卖出的数量，已经被卖出土地再卖出不重复计算
+                  </p>
+                  <p>
+                    <em>手续费率</em> 表示系统每次交易收取手续费
+                  </p>
+                  <p>
+                    <em>最小出价</em> 表示当前每块领地第一次出售的最低价格
+                  </p>
+                  <p>
+                    两个开关分别用于关闭浮层网格，和关闭随鼠标投射的遮罩
+                  </p>
+
+                  <p>
+                    <em>玩家状态栏</em> 会显示当前玩家的地址，logo，在当前世界的收益以及拥有的领土信息
+                  </p>
+                  <p>
+                    点击头像以上传新的logo，这里需要调用sign来做用户验证，该步骤不需要花费任何ether，也没有安全风险。
+                  </p>
+                  <p>
+                    系统会记录您当前的收益，点击<em>领取</em> 可以将收益领取到您当前地址上
+                  </p>
+              </div>
+              
+            </div>
+            <div class="row" >
+
+              <div class="col-md-offset-2 col-md-6  ">
+                  <p>
+                    右边区域为操作栏，顶上部分是当前鼠标所指网格的信息，中间是网格交易和配置框，下面部分是星舰配置框。
+
+                    你可以通过鼠标点击锁定领地。
+                  </p>
+                  <p>
+                      <em>领地</em> 标识出了当前鼠标所指领地的编号
+                  </p>
+                  <p>
+                    <em>经度纬度</em> 表示当前鼠标的位置
+                  </p>
+                  <p>
+                    <em>图片</em> 是该领地owner的logo，图片下面显示了该owner的地址
+                  </p>
+                  <p>
+                    <em>领地编号</em> 里表示当前你选定的领地号码，也可以直接输入编号点击对勾锁定领地
+                  </p>
+                  <p>
+                    <em>领地图片</em> 锁定领地后，这里会显示玩家设置的领地图片，当领地可以购买/调整出售价格时，对应的购买，出售按钮会被激活。
+                    出售领地时，您需要指定出售价格
+                  </p>
+                  <p>
+                    <em>领地图片</em> 当您是领地owner时，可以点击图片部分设置领地图片，同样您需要sign这个操作来通过验证。
+                  </p>
+              </div>
+              <div class="col-md-4 ">
+                  <img src="/images/howto-status.png" style="width:70%" class="image_wrapper">
+              </div>                       
+            </div>
+
             <div id="footer">
                <div id="social_box">
                   <a href="#"><img src="/howto/images/facebook.png" alt="facebook" /></a>
