--- a/public/howtoen.html
+++ b/public/howtoen.html
@@ -1,20 +1,147 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+   <head>
+      <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+      <!--
+         http://www.eegalayx.com/
+         
+         -->
+      <title>===EEGalaxy===</title>
+      <meta name="keywords" content="" />
+      <meta name="description" content="" />
+      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+      rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
+    crossorigin="anonymous">
+      <link href="/howto/tooplate_style.css" rel="stylesheet" type="text/css" />
+      <link rel="stylesheet" href="/howto/css/coda-slider.css" type="text/css" charset="utf-8" />
+      <script src="/howto/js/jquery-1.2.6.js" type="text/javascript"></script>
+      <script src="/howto/js/jquery.scrollTo-1.3.3.js" type="text/javascript"></script>
+      <script src="/howto/js/jquery.localscroll-1.2.5.js" type="text/javascript" charset="utf-8"></script>
+      <script src="/howto/js/jquery.serialScroll-1.2.1.js" type="text/javascript" charset="utf-8"></script>
+      <script src="/howto/js/coda-slider.js" type="text/javascript" charset="utf-8"></script>
+      <script src="/howto/js/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+   </head>
+   <body>
+      <div id="slider">
+         <div id="tooplate_wrapper">
+            <div id="tooplate_header">
+               <div id="site_title">
+                  <h1><a href="/"><img src="/images/logo.png"></a></h1>
+               </div>
 
-  <title>===EEGalaxy===</title>
-</head>
+               <div id="menu">
+                  <ul class="navigation">
+                     <li><a href="#brief" class="selected">Introduction</a></li>
+                     <li><a href="#about">Operation</a></li>
+                     <li><a href="#services">Trading</a></li>
+                     <li><a href="#gallery">In Dev</a></li>
+                     <li><a href="#contact">About Contract</a></li>
+                  </ul>
+               </div>
 
-<body>
+               <!-- end of tooplate_menu -->
+               <div class="cleaner"></div>
+            </div>
+            <div class="row" >
+              <div class="col-md-offset-2 col-md-10">
+                  <h2 id="brief">Welcome to EEGalaxy</h2>
 
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <canvas id="canvas"></canvas>
+                  <p>
+                    EEGalaxy is a virtual world game based on ethereum, this planet is divided into many grids that player could buy, sell and upgrade it, and even build your own fleet。
+                    Every land owner can share the revenue of this world.
+                  </p>  
+                  <img src="/images/howto-brief-en.png" alt="Image 01" class="image_wrapper" style="width:90%"/>
+              </div>
+            </div>
+            <!-- end of brief -->
 
-  <script src="javascripts/stars.js"></script>
-</body>
+            <div class="row" >
+              <div class="col-md-offset-2 col-md-4 ">
+                  <img src="/images/howto-status-en.png" style="width:70%" class="image_wrapper">
+                </div>
+              <div class="col-md-6  ">
+                  <h1 id="about">Operation</h1>
+                  <p>
+                    after loading the game, the status panel is in the left side, which consist of world status and player status.
+                  </p>
+                  <p>
+                    <em>Grids count</em> the total number of the grids
+                  </p>
+                  <p>
+                    <em>Sold</em> the number of grids sold out, one grid is calculated only once
+                  </p>
+                  <p>
+                    <em>Fee</em> the charge rate of transaction in the world
+                  </p>
+                  <p>
+                    <em>Minimal price</em> the minimum price of a unsold grid
+                  </p>
+                  <p>
+                    there are two switches control the display of grids network and the project grid of the mouse.
+                  </p>
 
+                  <p>
+                    <em>玩家状态栏</em> 会显示当前玩家的地址，logo，在当前世界的收益以及拥有的领土信息
+                  </p>
+                  <p>
+                    点击头像以上传新的logo，这里需要调用sign来做用户验证，该步骤不需要花费任何ether，也没有安全风险。
+                  </p>
+                  <p>
+                    系统会记录您当前的收益，点击<em>领取</em> 可以将收益领取到您当前地址上
+                  </p>
+              </div>
+              
+            </div>
+            <div class="row" >
+
+              <div class="col-md-offset-2 col-md-6  ">
+                  <p>
+                    右边区域为操作栏，顶上部分是当前鼠标所指网格的信息，中间是网格交易和配置框，下面部分是星舰配置框。
+
+                    你可以通过鼠标点击锁定领地。
+                  </p>
+                  <p>
+                      <em>领地</em> 标识出了当前鼠标所指领地的编号
+                  </p>
+                  <p>
+                    <em>经度纬度</em> 表示当前鼠标的位置
+                  </p>
+                  <p>
+                    <em>图片</em> 是该领地owner的logo，图片下面显示了该owner的地址
+                  </p>
+                  <p>
+                    <em>领地编号</em> 里表示当前你选定的领地号码，也可以直接输入编号点击对勾锁定领地
+                  </p>
+                  <p>
+                    <em>领地图片</em> 锁定领地后，这里会显示玩家设置的领地图片，当领地可以购买/调整出售价格时，对应的购买，出售按钮会被激活。
+                    出售领地时，您需要指定出售价格
+                  </p>
+                  <p>
+                    <em>领地图片</em> 当您是领地owner时，可以点击图片部分设置领地图片，同样您需要sign这个操作来通过验证。
+                  </p>
+              </div>
+              <div class="col-md-4 ">
+                  <img src="/images/howto-status.png" style="width:70%" class="image_wrapper">
+              </div>                       
+            </div>
+
+            <div id="footer">
+               <div id="social_box">
+                  <a href="#"><img src="/howto/images/facebook.png" alt="facebook" /></a>
+                  <a href="#"><img src="/howto/images/flickr.png" alt="flickr" /></a>
+                  <a href="#"><img src="/howto/images/myspace.png" alt="myspace" /></a>
+                  <a href="#"><img src="/howto/images/twitter.png" alt="twitter" /></a>
+                  <a href="#"><img src="/howto/images/youtube.png" alt="youtube" /></a>
+               </div>
+               <div id="footer_left">
+                  Copyright © 2048 <a href="#">Company Name</a><br />
+                  <!-- Galaxy by <a rel="nofollow" href="http://www.tooplate.com">Templates</a><br /> -->
+               </div>
+               <div class="cleaner"></div>
+            </div>
+         </div>
+      </div>
+   </body>
 </html>
