--- a/public/howtoch.html
+++ b/public/howtoch.html
@@ -47,6 +47,7 @@
             <div class="row" >
               <div class="col-md-offset-2 col-md-10">
                   <h2 id="brief">欢迎来到以太银河</h2>
+                  <em>游戏正在测试中，请确认metamask插件连接到Ropsten testnet!</em>
 
                   <p>
                     以太银河是一款基于以太坊的虚拟世界游戏，这个星球被分成了许多小网格并由智能合约管理。玩家可以购买，出售以及修建规划你的领地，并修建自己的舰队。
@@ -176,7 +177,11 @@
             <div class="row" >
                 <div class="col-md-offset-2 col-md-10">
                     <h1 id="coming">即将到来</h1>
-                    
+                    <p>
+                      我们正在搭建<em>星舰</em> 系统，让每个玩家有一个座驾。 <br />
+                      不久之后，您就可以在您的领地上修建<em>建筑</em> 了。 <br />
+                      我们还希望近期内让玩家可以自由上传，出售他们所制作的<em>建筑模型</em> 。
+                    </p>
                 </div>
               </div>
             <div id="footer">
