--- a/public/howtoen.html
+++ b/public/howtoen.html
@@ -47,7 +47,9 @@
             <div class="row" >
               <div class="col-md-offset-2 col-md-10">
                   <h2 id="brief">Welcome to EEGalaxy</h2>
-
+                  <p>
+                    <em> the game is in test, please make sure your metamask are connecting to Ropsten testnet!</em>
+                  </p>
                   <p>
                     EEGalaxy is a virtual world game based on ethereum, this planet is divided into many grids that player could buy, sell and upgrade it, and even build your own fleet。
                     <br/>
