--- a/public/howtoch.html
+++ b/public/howtoch.html
@@ -22,6 +22,16 @@
       <script src="/howto/js/jquery.easing.1.3.js" type="text/javascript" charset="utf-8"></script>
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-73914924-4"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-73914924-4');
+      </script>
+
    </head>
    <body>
       <div id="slider">
