--- a/public/howtoch.html
+++ b/public/howtoch.html
@@ -63,6 +63,15 @@
                     以太银河是一款基于以太坊的虚拟世界游戏，这个星球被分成了许多小网格并由智能合约管理。玩家可以购买，出售以及修建规划你的领地，并修建自己的舰队。
                     每一个领主也是这个虚拟世界的参与者，可以分享这个虚拟世界里的收益。
                   </p>  
+                  <br/>
+                  <p>
+                    比如当前有<em>4</em> 块地，分别属于A, B, C(A两块，B,C一人一块)，当A再用<em>1ETH</em> 购买一块无主的地时，<em>0.5ETH</em> 会划为系统收益， 另外<em>0.5ETH</em> 会平均分给B,C <br/>
+                    或者当D用<em>3ETH</em> 买下A的一块地时， <em>2.7ETH</em> 会分给A，<em>0.15ETH</em> 会分给系统，还有<em>0.15ETH</em> 平均分给A,B,C
+                  </p>
+
+                  <p>
+                    <em>一句话：系统的收益会按每个领主当前拥有的土地数量等比例分享给参与者</em>
+                  </p>
                   <img src="/images/howto-brief.png" alt="Image 01" class="image_wrapper" style="width:90%"/>
               </div>
             </div>
