--- a/public/howtoen.html
+++ b/public/howtoen.html
@@ -65,6 +65,15 @@
                     <br/>
                     Every land owner can <em>share</em> the revenue of this world.
                   </p>  
+                  <br/>
+                  <p>
+                    Ex: if there are <em>4</em> lands sold out to A, B and C (A 2, B 1, C 1)，when A bought another ownerless land in price of <em>1ETH</em>, <em>0.5ETH</em> goes to the galaxy, the other <em>0.5ETH</em> will be distributed to B, C equally.<br/>
+                    or D bought one of A's land in <em>3ETH</em>, <em>2.7ETH</em> goes to A，<em>0.15ETH</em> goes to galaxy, the <em>0.15ETH</em> left will be distributed to A, B and C equally (since A still have one lands) <br/>
+                  </p>
+
+                  <p>
+                    <em>in one world, all the galaxy gain will be shared by land owners according to the count of their lands</em>
+                  </p>
                   <img src="/images/howto-brief-en.png" alt="Image 01" class="image_wrapper" style="width:90%"/>
               </div>
             </div>
